--- a/src/scss/frontend/components/classes/_buttons.scss
+++ b/src/scss/frontend/components/classes/_buttons.scss
@@ -1,8 +1,18 @@
-////////////////////////////////////////////////////////////////////////////////
-// Button Styles
+// Button Classes
 //
-// Includes all Frontend button styles.
-////////////////////////////////////////////////////////////////////////////////
+// DO NOT EDIT! Includes all Frontend button styles.
+//
+// Markup:
+// <p><a class="button" href="#">.button</a></p>
+// <p><a class="button button--full" href="#">.button--full</a></p>
+// <p><a class="button button--full-small" href="#">.button--full-small</a></p>
+// <p><a class="button button--normal-small" href="#">.button--normal-small</a></p>
+// <p><a class="button button--full-medium" href="#">.button--full-small</a></p>
+// <p><a class="button button--normal-medium" href="#">.button--normal-small</a></p>
+// <p><a class="button button--full-large" href="#">.button--full-large</a></p>
+// <p><a class="button button--normal-large" href="#">.button--normal-large</a></p>
+//
+// Style guide: frontend.components.buttons
 
 .button {
   @extend %button;
