--- a/src/scss/frontend/global/_extendables.scss
+++ b/src/scss/frontend/global/_extendables.scss
@@ -91,6 +91,7 @@
   font-family: $button-font-family;
   font-size: $button-font-size;
   font-weight: $button-font-weight;
+  letter-spacing: $button-letter-spacing;
   line-height: $button-line-height;
   padding: $button-padding;
   text-align: center;
