--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,7 +63,7 @@
 //
 // Application selector declarations.
 //
-// Style guide: application.global
+// Style guide: application.base
 
 //@import 'application/base/..';
 
