--- a/src/scss/application/global/_variables.scss
+++ b/src/scss/application/global/_variables.scss
@@ -91,9 +91,9 @@ $global-right: if($global-text-direction == rtl, left, right);
 // 4. Breakpoints
 // -----------------------------------------------------------------------------
 
-$small:        $global-width-small - $gutter-padding-small; // Tablet & up
-$medium:       $global-width-medium - $gutter-padding-medium; // Desktop & up
-$large:        $global-width-large - $gutter-padding-large; // Large screens
+$small:        768px; // Tablet & up
+$medium:       1200px; // Desktop & up
+$large:        1400px; // Large screens
 
 $small-down:   0 $small; // Tablet & up
 $medium-down:  0 $medium; // Desktop & up
@@ -166,7 +166,7 @@ $xxlarge-font-size:     $header-2-size;
 $xlarge-font-size:      $header-3-size;
 $large-font-size:       $header-4-size;
 $medium-font-size:      $header-5-size;
-$normal-font-size:      $header-6-size;
+$normal-font-size:      rem-calc($global-font-size);
 $small-font-size:       rem-calc($global-font-size - 1);
 $xsmall-font-size:      rem-calc($global-font-size - 3);
 $xxsmall-font-size:     rem-calc($global-font-size - 5);
@@ -183,10 +183,12 @@ $code-background:  $xlight-gray;
 $code-border:      0;
 $code-padding:     rem-calc(2);
 
-$anchor-color:                 $primary-color;
-$anchor-color-hover:           scale-color($anchor-color, $lightness: -50%);
-$anchor-text-decoration:       none;
-$anchor-text-decoration-hover: underline;
+$anchor-color:                         $primary-color;
+$anchor-color-hover:                   scale-color($anchor-color, $lightness: -50%);
+$anchor-text-decoration:               none;
+$anchor-text-decoration-hover:         underline;
+$anchor-color-visited:                 $primary-color;
+$anchor-text-decoration-visited-hover: $anchor-text-decoration;
 
 $hr-width:  50%;
 $hr-border: rem-calc(1) solid $gray;
@@ -335,6 +337,7 @@ $button-font-weight:         $global-weight-bold;
 $button-background-disabled: $gray;
 $button-color-disabled:      $dark-gray;
 $button-border-disabled:     rem-calc(1) solid $gray;
+$button-letter-spacing:      normal;
 
 $callout-background:     rgba($info-color, .3);
 $callout-margin:         rem-calc(0 0 $global-margin 0);
