Added the  variable

--- a/src/scss/frontend/global/_variables.scss
+++ b/src/scss/frontend/global/_variables.scss
@@ -3,6 +3,7 @@
 // 1. Global
 // -----------------------------------------------------------------------------
 
+$global-min-width:         320px                                       !default;
 $global-width:             320px                                       !default; // Mobile
 $global-width-small:       728px                                       !default; // Tablet & up
 $global-width-medium:      1200px                                      !default; // Desktop & up
