--- a/src/scss/application/global/_variables.scss
+++ b/src/scss/application/global/_variables.scss
@@ -7,6 +7,7 @@
 // 1. Global
 // -----------------------------------------------------------------------------
 
+$global-min-width:         320px;
 $global-width:             320px; // Mobile
 $global-width-small:       728px; // Tablet & up
 $global-width-medium:      1200px; // Desktop & up
