--- a/src/scss/frontend/global/_extendables.scss
+++ b/src/scss/frontend/global/_extendables.scss
@@ -14,6 +14,7 @@
   @include clearfix;
   margin: 0 auto;
   max-width: $global-width;
+  min-width: $global-min-width;
   width: 100%;
 
   @include breakpoint($small) {
