--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,15 +28,15 @@
 //
 // Style guide: frontend.components
 
-@import 'frontend/components/classes/callout';
 @import 'frontend/components/classes/colors';
 @import 'frontend/components/classes/common';
 @import 'frontend/components/classes/layout';
 @import 'frontend/components/classes/typography';
 @import 'frontend/components/classes/alignment';
-@import 'frontend/components/classes/buttons';
 @import 'frontend/components/classes/lists';
-@import 'frontend/components/classes/visibility';
+//@import 'frontend/components/classes/callout';
+//@import 'frontend/components/classes/buttons';
+//@import 'frontend/components/classes/visibility';
 
 // Frontend Drupal 7 component, common classes & styles for Drupal 7.
 //@import 'frontend/components/drupal7';
