--- a/src/scss/application/global/_variables.scss
+++ b/src/scss/application/global/_variables.scss
@@ -177,6 +177,9 @@ $paragraph-lineheight:     $global-lineheight;
 $paragraph-margin-bottom:  rem-calc($global-margin);
 $paragraph-text-rendering: optimizeLegibility;
 
+$selection-background: $primary-color;
+$selection-color:      $white;
+
 $code-color:       $xdark-gray;
 $code-font-family: $font-family-monospace;
 $code-font-weight: $global-weight-normal;
@@ -211,6 +214,7 @@ $blockquote-margin:           rem-calc($global-margin 0);
 $blockquote-border:           rem-calc(5) solid $gray;
 $blockquote-font-family:      $header-font-family;
 $blockquote-font-size:        $medium-font-size;
+$blockquote-letter-spacing:   normal;
 $blockquote-line-height:      inherit;
 $blockquote-background:       transparent;
 
