--- a/src/scss/frontend/base/_typography.scss
+++ b/src/scss/frontend/base/_typography.scss
@@ -33,6 +33,7 @@ td {
 // Paragraphs
 p {
   font-size: inherit;
+  letter-spacing: $paragraph-letter-spacing;
   line-height: $paragraph-lineheight;
   margin-bottom: $paragraph-margin-bottom;
   text-rendering: $paragraph-text-rendering;
@@ -331,7 +332,9 @@ pre {
   border: $code-border;
   color: $code-color;
   font-family: $code-font-family;
+  font-size: $code-font-size;
   font-weight: $code-font-weight;
+  letter-spacing: $code-letter-spacing;
   padding: $code-padding;
 }
 
