--- a/src/scss/frontend/global/_variables.scss
+++ b/src/scss/frontend/global/_variables.scss
@@ -177,7 +177,10 @@ $paragraph-text-rendering: optimizeLegibility                          !default;
 $selection-background: $primary-color                                  !default;
 $selection-color:      $white                                          !default;
 
+$figure-border:        rem-calc(1) solid $gray                         !default;
 $figure-caption-style: italic                                          !default;
+$figure-margin:        rem-calc(0 0 $global-margin 0)                  !default;
+$figure-padding:       rem-calc(5)                                     !default;
 
 $code-color:          $xdark-gray                                      !default;
 $code-font-family:    $font-family-monospace                           !default;
