--- a/src/scss/frontend/components/lib/drupal/_d7.scss
+++ b/src/scss/frontend/components/lib/drupal/_d7.scss
@@ -7,6 +7,7 @@
 // Style guide: frontend.components.lib.drupal.drupal7
 
 div {
+  // scss-lint:disable NestingDepth
   &.status,
   &.warning,
   &.error {
@@ -38,6 +39,28 @@ div {
     border: 0;
     margin-bottom: rem-calc($global-margin);
     margin-top: 0;
+  }
+
+  &.password-suggestions {
+    font-weight: $global-weight-bold;
+
+    ul {
+      font-weight: $global-weight-normal;
+      margin-top: rem-calc($global-margin / 2);
+    }
+  }
+
+  &.form-item {
+    div {
+      &.password-suggestions {
+        background-color: rgba($warning-color, .1);
+        border: 0;
+        color: $warning-color;
+        margin: rem-calc($global-margin 0);
+        padding: rem-calc($global-padding);
+        width: auto;
+      }
+    }
   }
 }
 
@@ -86,13 +109,13 @@ div {
 }
 
 .password-strength {
-  margin-top: rem-calc(23);
+  margin-top: rem-calc(22);
 }
 
 .password-indicator {
   background-color: $xlight-gray;
   border-radius: rem-calc($global-radius);
-  height: rem-calc(15);
+  height: rem-calc(18);
   overflow: hidden;
 
   div {
@@ -104,4 +127,10 @@ div {
 .password-strength-title,
 .password-strength-text {
   font-size: $small-font-size;
+}
+
+.form-actions {
+  .form-submit {
+    margin-right: rem-calc(10);
+  }
 }
