--- a/src/scss/frontend/components/lib/drupal/modules/_d7-styleguide.scss
+++ b/src/scss/frontend/components/lib/drupal/modules/_d7-styleguide.scss
@@ -6,28 +6,6 @@
 //
 // Style guide: frontend.components.lib.drupal.modules.d7-styleguide
 // scss-lint:disable IdSelector, QualifyingElement
-.page-admin-appearance-styleguide {
-  #main {
-    @extend %row;
-  }
-
-  #block-system-main {
-    @include grid-span($num-columns, 1);
-
-    @include breakpoint($small) {
-      @include grid-span($num-columns-small, 1);
-    }
-
-    @include breakpoint($medium) {
-      @include grid-span($num-columns-medium, 1);
-    }
-
-    @include breakpoint($large) {
-      @include grid-span($num-columns-large, 1);
-    }
-  }
-}
-
 #styleguide-header {
   background: $xlight-gray;
   border: 0;
@@ -38,6 +16,12 @@
   li a.active {
     color: $anchor-color;
   }
+
+  h3 {
+    font-weight: $global-weight-bold;
+    margin: rem-calc(0 0 ($global-margin / 2) 0);
+    text-transform: none;
+  }
 }
 
 h2 {
@@ -47,7 +31,7 @@ h2 {
     font-family: $header-font-family;
     font-size: $xxsmall-font-size;
     font-weight: $global-weight-bold;
-    margin: rem-calc($global-margin 0);
+    margin: rem-calc(0 0 $global-margin 0);
     padding-bottom: rem-calc(10);
     padding-left: rem-calc(10);
     padding-right: rem-calc(10);
@@ -58,6 +42,7 @@ h2 {
 div {
   &.styleguide {
     border-top: 0;
+    margin-bottom: rem-calc($global-margin);
     padding-top: 0;
   }
 }
